languages/montiarc-fe/src/test/resources/contextconditions/valid/InitBlockWithAJava.arc
package valid;

component InitBlockWithAJava {

	var Integer integerVariable;

	init {
		integerVariable = 10;
	}

	compute {

	}

}